<resources>
    <string name="app_name">Rice Desease Detection App</string>

    <!--    SPLASH SCREEN-->
    <string name="splash_screen_title1">RICE DISEASE</string>
    <string name="splash_screen_title2">DETECTION</string>
    <string name="splash_screen_description">Aplikasi Pendeteksi\nPenyakit Pada Tanaman Padi</string>

    <!--    MAIN ACTIVITY SCREEN-->
    <string name="main_screen_btn1">MULAI DETEKSI</string>
    <string name="main_screen_btn2">INFORMASI PENYAKIT</string>
    <string name="main_screen_btn3">TENTANG APLIKASI</string>

    <!--    DETECTION ACTIVITY SCREEN-->
    <string name="taking_picture">Ambil Gambar</string>
    <string name="image">IMAGE</string>
    <string name="type_of_disease">Jenis Penyakit : </string>
    <string name="control_info">Info Pengendalian : </string>

<!--    INFORMATION ACTIVITY SCREEN-->
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="control">Cara Pengendalian :</string>

<!--    DECRIPTION-->
    <string name="desc_bg">Background picture</string>
    <string name="desc_title">Title background white</string>
    <string name="desc_bg_about">About background</string>
    <string name="desc_bg_title">Title Background green</string>
    <string name="desc_preview_image">Preview image</string>
    <string name="desc_detail_image">Preview detail image</string>
</resources>