<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_plant"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/plant_img"
        android:contentDescription="@string/desc_detail_image"/>

    <TextView
        android:id="@+id/txt_title_disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/poppins_medium"
        android:textSize="15sp"
        android:textColor="@color/green_21"
        android:textAllCaps="true"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/iv_plant"
        app:layout_constraintStart_toEndOf="@id/iv_plant"/>

    <TextView
        android:id="@+id/txt_description_disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="13sp"
        android:textColor="@color/green_21"
        app:layout_constraintTop_toBottomOf="@id/txt_title_disease"
        app:layout_constraintStart_toEndOf="@id/iv_plant"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txt_title_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/control"
        android:textColor="@color/green_21"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description_disease" />

    <TextView
        android:id="@+id/txt_description_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/description"
        android:textColor="@color/green_21"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_control" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/txt_description_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/green_21"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>