<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/iv_bg_splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/splash_screen"/>

    <ImageView
        android:id="@+id/bg_rectangle"
        android:layout_width="253dp"
        android:layout_height="43dp"
        android:src="@drawable/bg_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <TextView
        android:id="@+id/txt_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extra_bold"
        android:gravity="center"
        android:text="@string/splash_screen_title1"
        android:textColor="@color/green"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/bg_rectangle"
        app:layout_constraintEnd_toEndOf="@id/bg_rectangle"
        app:layout_constraintStart_toStartOf="@id/bg_rectangle"
        app:layout_constraintTop_toTopOf="@id/bg_rectangle"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/txt_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_title2"
        android:fontFamily="@font/poppins_extra_bold"
        android:textSize="36sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/bg_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/splash_screen_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title2"
        app:layout_constraintVertical_bias="0.936" />

</androidx.constraintlayout.widget.ConstraintLayout>