<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetectionActivity">

    <ImageView
        android:id="@+id/iv_bg_splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/bg_rice"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bg_rectangle"
                android:layout_width="253dp"
                android:layout_height="43dp"
                android:src="@drawable/bg_rectangle_white"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:gravity="center"
                android:text="@string/splash_screen_title1"
                android:textColor="@color/green_21"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="@id/bg_rectangle"
                app:layout_constraintEnd_toEndOf="@id/bg_rectangle"
                app:layout_constraintStart_toStartOf="@id/bg_rectangle"
                app:layout_constraintTop_toTopOf="@id/bg_rectangle"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/txt_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_screen_title2"
                android:fontFamily="@font/poppins_extra_bold"
                android:textSize="36sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/bg_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/bg_rectangle_green_36"
                android:layout_width="269dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txt_title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/bg_rectangle_green_36"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:text="@string/taking_picture"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/bg_rectangle_green_36"
                app:layout_constraintEnd_toEndOf="@id/bg_rectangle_green_36"
                app:layout_constraintStart_toStartOf="@id/bg_rectangle_green_36"
                app:layout_constraintTop_toTopOf="@id/bg_rectangle_green_36"
                tools:ignore="RtlSymmetry"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/ic_camera" />

            <ImageView
                android:id="@+id/bg_picture"
                android:layout_width="269dp"
                android:layout_height="191dp"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/bg_rectangle_green_36"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/bg_rectangle_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:fontFamily="@font/poppins_extra_bold"
                android:textSize="40sp"
                app:layout_constraintTop_toTopOf="@id/bg_picture"
                app:layout_constraintStart_toStartOf="@id/bg_picture"
                app:layout_constraintEnd_toEndOf="@id/bg_picture"
                app:layout_constraintBottom_toBottomOf="@id/bg_picture"/>

            <ImageView
                android:id="@+id/bg_btn1"
                android:layout_width="270dp"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/bg_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/bg_btn_enabled"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_btn1"
                app:layout_constraintStart_toStartOf="@id/bg_btn1"
                app:layout_constraintEnd_toEndOf="@id/bg_btn1"
                app:layout_constraintBottom_toBottomOf="@id/bg_btn1"
                android:textColor="@color/white"
                android:text="@string/main_screen_btn1"
                android:fontFamily="@font/poppins_extra_bold"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/bg_textlines"
                android:layout_width="335dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/bg_btn1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/bg_rectangle_textlines"/>

            <TextView
                android:id="@+id/txt_type_of_disease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/bg_textlines"
                app:layout_constraintStart_toStartOf="@id/bg_textlines"
                android:text="@string/type_of_disease"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="15sp"
                android:textColor="@color/green_21"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_type_of_disease1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/green_21"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/bg_textlines"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/txt_type_of_disease"
                app:layout_constraintTop_toTopOf="@id/bg_textlines"
                tools:text="loremipsum" />

            <TextView
                android:id="@+id/txt_control_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/txt_type_of_disease"
                app:layout_constraintStart_toStartOf="@id/bg_textlines"
                android:text="@string/control_info"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="15sp"
                android:textColor="@color/green_21"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_control_info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/green_21"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/bg_textlines"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/txt_control_info"
                app:layout_constraintTop_toBottomOf="@id/txt_type_of_disease1"
                tools:text="loremipsum" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="29dp"
                android:text="@string/splash_screen_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/bg_textlines"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.936" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>