<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">

    <ImageView
        android:id="@+id/iv_bg_splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/bg_rice"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bg_rectangle"
                android:layout_width="253dp"
                android:layout_height="43dp"
                android:src="@drawable/bg_rectangle_white"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:gravity="center"
                android:text="@string/splash_screen_title1"
                android:textColor="@color/green_21"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="@id/bg_rectangle"
                app:layout_constraintEnd_toEndOf="@id/bg_rectangle"
                app:layout_constraintStart_toStartOf="@id/bg_rectangle"
                app:layout_constraintTop_toTopOf="@id/bg_rectangle"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/txt_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_screen_title2"
                android:fontFamily="@font/poppins_extra_bold"
                android:textSize="36sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/bg_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/bg_description"
                android:layout_width="318dp"
                android:layout_height="548dp"
                app:layout_constraintTop_toTopOf="@id/bg_rectangle_green_36"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:src="@drawable/bg_rectangle_white"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="318dp"
                android:layout_height="548dp"
                app:layout_constraintTop_toTopOf="@id/bg_description"
                app:layout_constraintStart_toStartOf="@id/bg_description"
                app:layout_constraintEnd_toEndOf="@id/bg_description"
                app:layout_constraintBottom_toBottomOf="@id/bg_description"
                tools:listitem="@layout/item_row_information"/>

            <ImageView
                android:id="@+id/bg_rectangle_green_36"
                android:layout_width="270dp"
                android:layout_height="58dp"
                app:layout_constraintTop_toBottomOf="@id/txt_title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/bg_rectangle_green_36"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_rectangle_green_36"
                app:layout_constraintStart_toStartOf="@id/bg_rectangle_green_36"
                app:layout_constraintEnd_toEndOf="@id/bg_rectangle_green_36"
                app:layout_constraintBottom_toBottomOf="@id/bg_rectangle_green_36"
                android:fontFamily="@font/poppins_extra_bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/main_screen_btn2"/>

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="29dp"
                android:text="@string/splash_screen_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bg_description"
                app:layout_constraintVertical_bias="0.936" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>